--- a/figures/CNAMP174corrections.tex
+++ b/figures/CNAMP174corrections.tex
@@ -111,11 +111,11 @@
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(2794,4602){\makebox(0,0)[r]{\strut{}experimental}}%
+      \put(3454,4602){\makebox(0,0)[r]{\strut{}experimental}}%
       \csname LTb\endcsname%
-      \put(2794,4382){\makebox(0,0)[r]{\strut{}DSM on}}%
+      \put(3454,4382){\makebox(0,0)[r]{\strut{}$\alpha_E$ correction on}}%
       \csname LTb\endcsname%
-      \put(2794,4162){\makebox(0,0)[r]{\strut{}DSM off}}%
+      \put(3454,4162){\makebox(0,0)[r]{\strut{}$\alpha_E$ correction off}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{CNAMP174corrections}}%
