--- a/figures/CTAMP174corrections.tex
+++ b/figures/CTAMP174corrections.tex
@@ -113,11 +113,11 @@
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(4371,4602){\makebox(0,0)[r]{\strut{}experimental}}%
+      \put(4701,4602){\makebox(0,0)[r]{\strut{}experimental}}%
       \csname LTb\endcsname%
-      \put(4371,4382){\makebox(0,0)[r]{\strut{}DSM on}}%
+      \put(4701,4382){\makebox(0,0)[r]{\strut{}$\alpha_E$ correction on}}%
       \csname LTb\endcsname%
-      \put(4371,4162){\makebox(0,0)[r]{\strut{}DSM off}}%
+      \put(4701,4162){\makebox(0,0)[r]{\strut{}$\alpha_E$ correction off}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{CTAMP174corrections}}%
