--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,14 @@
+@article{dyachuk2015simulating,
+  title={Simulating pitching blade with free vortex model coupled with dynamic stall model for conditions of straight bladed vertical axis turbines},
+  author={Dyachuk, E. and Goude, A. and Bernhoff, H.},
+  journal={Journal of Solar Energy Engineering},
+  volume={137},
+  number={4},
+  pages={041008},
+  year={2015},
+  publisher={American Society of Mechanical Engineers}
+}
+
 @techreport{sheldahl1981aerodynamic,
   title={Aerodynamic characteristics of seven symmetrical airfoil sections through 180-degree angle of attack for use in aerodynamic analysis of vertical axis wind turbines},
   author={Sheldahl, R. E. and Klimas, P. C.},
