small correction in paragraph

--- a/paper.tex
+++ b/paper.tex
@@ -396,7 +396,7 @@ A simulation with a RANS $k$-$\epsilon$ standard turbulence model was carried ou
 \subsection{Unsteady effects correction}
 
 
-According to \cite{dyachuk2015simulating}, where the dynamic stall model is combined with a vortex model, it is beneficial to omit the attached flow correction equation \ref{alphaeq} and instead use $\alpha_E$ = $\alpha_n$. Hence, it is of interest to investigate if this correction should be included or not when the ALM is used instead of the vortex model. Figure \ref{AMP174corrections} depicts that simulated results with the attached flow corrections have small improvements in the accuracy and are closer to experimental data. Results without corrections also have good agreement. Both $C_N$ and $C_T$ peak values are not overestimated.  This same study was carried out for a bigger angle of attack range and differences are less significant.        This has also been tested for larger angles of attack and the differences between using equation \ref{alphaeq} or not are less significant here as the separated flow modeling dominates the force calculation.  
+According to \cite{dyachuk2015simulating}, where the dynamic stall model is combined with a vortex model, it is beneficial to omit the attached flow correction equation \ref{alphaeq} and instead use $\alpha_E$ = $\alpha_n$. Hence, it is of interest to investigate if this correction should be included or not when the ALM is used instead of the vortex model. Figure \ref{AMP174corrections} depicts that simulated results with the attached flow corrections have small improvements in the accuracy and are closer to experimental data. Results without corrections also have good agreement. Both $C_N$ and $C_T$ peak values are not overestimated. This has also been tested for larger angles of attack and the differences between using equation \ref{alphaeq} or not are less significant here as the separated flow modeling dominates the force calculation.  
 
 \begin{figure}[h]
 \begin{minipage}{18pc}
