--- a/paper.tex
+++ b/paper.tex
@@ -390,7 +390,7 @@ A simulation with a RANS $k$-$\epsilon$ standard turbulence model was carried ou
 \begin{minipage}{18pc}
 \resizebox{\columnwidth}{!}{\input{./figures/CTRANSLES}}
 \end{minipage}
-\caption{\label{RANSLES}Normal (left) and tangential (right) force coefficients for different turbulence models, pithing motion with a maximum amplitude of 22.6\degree\ }
+\caption{\label{RANSLES}Normal (left) and tangential (right) force coefficients for different turbulence models, pitching motion with a maximum amplitude of 22.6\degree\ }
 \end{figure}
 
 \subsection{Unsteady effects correction}
@@ -406,7 +406,7 @@ According to \cite{dyachuk2015simulating}, where the dynamic stall model is comb
 \begin{minipage}{18pc}
 \resizebox{\columnwidth}{!}{\input{./figures/CTAMP174corrections}}
 \end{minipage}
-\caption{\label{AMP174corrections}Normal (left) and tangential (right) force coefficients with and without unsteady effects correction, pithing motion with a maximum amplitude of 17.4\degree\ }
+\caption{\label{AMP174corrections}Normal (left) and tangential (right) force coefficients with and without unsteady effects correction, pitching motion with a maximum amplitude of 17.4\degree\ }
 \end{figure}
 
 
