--- a/paper.tex
+++ b/paper.tex
@@ -91,7 +91,7 @@ The model employed here is based on the incompressible Navier--Stokes equation
 with $\vec{f}$ representing the body forces, which are the loads on the rotating blades for this case.
 
 Static lift and drag coefficients of the 2D profile used for this study are
-taken from the technical report made by Sheldahl and Klimas
+taken from the technical report by Sheldahl and Klimas
 \cite{sheldahl1981aerodynamic}, which is a popular database containing values
 for a wide range of Reynolds numbers. These coefficients are tabulated and
 combined with the blade element approach for determining body forces acting on
