More instances of 'pithing'

--- a/paper.tex
+++ b/paper.tex
@@ -167,7 +167,7 @@ where $C_{N \alpha}$ indicates the slope of the static normal force coefficient 
 \begin{align}
 & \alpha_{E_n} = \alpha_n - X_n -Y_n - Z_n	\label{alphaeq}
 \end{align}
-where $\alpha$ is the geometrical angle of attack and $X$, $Y$ and $Z$ are the deficiency functions, which are empirically derived, based on the flow velocity and the pithing rate, the details are found in \cite{dyachuk2013dynamic}. Indices $n$ and $n-1$ represent the current and previous time-step. A delayed angle of attack is considered due to the lag in pressure response, and it is calculated as
+where $\alpha$ is the geometrical angle of attack and $X$, $Y$ and $Z$ are the deficiency functions, which are empirically derived, based on the flow velocity and the pitching rate, the details are found in \cite{dyachuk2013dynamic}. Indices $n$ and $n-1$ represent the current and previous time-step. A delayed angle of attack is considered due to the lag in pressure response, and it is calculated as
 \begin{align}
 & {\alpha _n}' = {\alpha _n} - D_{\alpha _n}    	\label{alphadel}
 \end{align}
@@ -323,7 +323,7 @@ transient term $\frac{\partial \alpha}{\partial t}$.
 \begin{minipage}{18pc}
 \resizebox{\columnwidth}{!}{\input{./figures/CT226dtLEScoarse}}
 \end{minipage}
-\caption{\label{figdtcoarse}Normal (left) and tangential (right) force coefficients varying time-step discretization for a pithing motion with a maximum amplitude of 22.6\degree\ }
+\caption{\label{figdtcoarse}Normal (left) and tangential (right) force coefficients varying time-step discretization for a pitching motion with a maximum amplitude of 22.6\degree\ }
 \end{figure}
 
 \subsection{TSR Variation}
@@ -414,10 +414,10 @@ According to \cite{dyachuk2015simulating}, where the dynamic stall model is comb
 
 It has been demonstrated that the presented coupled model ALM with DSM, shows
 good agreement with experimental data, considering the complexity of the flows
-studied. Moreover, the model has been tested for a wide range of pithing
+studied. Moreover, the model has been tested for a wide range of pitching
 amplitudes, therefore, with different stall conditions (none, shallow, and deep
 stall), results agreed well compared with experiments. The model is stable and
-accurate for the tested pithing blade motions, which makes it suitable for
+accurate for the tested pitching blade motions, which makes it suitable for
 application in VAWT simulations.
 
 
