results with central element of the blade

--- a/figures/CN226dtLEScoarse.tex
+++ b/figures/CN226dtLEScoarse.tex
@@ -75,19 +75,21 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(946,704){\makebox(0,0)[r]{\strut{}-1.5}}%
+      \put(946,704){\makebox(0,0)[r]{\strut{}-2}}%
       \csname LTb\endcsname%
-      \put(946,1286){\makebox(0,0)[r]{\strut{}-1}}%
+      \put(946,1213){\makebox(0,0)[r]{\strut{}-1.5}}%
       \csname LTb\endcsname%
-      \put(946,1867){\makebox(0,0)[r]{\strut{}-0.5}}%
+      \put(946,1722){\makebox(0,0)[r]{\strut{}-1}}%
       \csname LTb\endcsname%
-      \put(946,2449){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(946,2231){\makebox(0,0)[r]{\strut{}-0.5}}%
       \csname LTb\endcsname%
-      \put(946,3030){\makebox(0,0)[r]{\strut{} 0.5}}%
+      \put(946,2740){\makebox(0,0)[r]{\strut{} 0}}%
       \csname LTb\endcsname%
-      \put(946,3612){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(946,3248){\makebox(0,0)[r]{\strut{} 0.5}}%
       \csname LTb\endcsname%
-      \put(946,4193){\makebox(0,0)[r]{\strut{} 1.5}}%
+      \put(946,3757){\makebox(0,0)[r]{\strut{} 1}}%
+      \csname LTb\endcsname%
+      \put(946,4266){\makebox(0,0)[r]{\strut{} 1.5}}%
       \csname LTb\endcsname%
       \put(946,4775){\makebox(0,0)[r]{\strut{} 2}}%
       \csname LTb\endcsname%
@@ -123,9 +125,9 @@
       \csname LTb\endcsname%
       \put(2794,4162){\makebox(0,0)[r]{\strut{}$\Delta$t=0.003[s]}}%
       \csname LTb\endcsname%
-      \put(2794,3942){\makebox(0,0)[r]{\strut{}$\Delta$t=0.055[s]}}%
+      \put(2794,3942){\makebox(0,0)[r]{\strut{}$\Delta$t=0.0055[s]}}%
       \csname LTb\endcsname%
-      \put(2794,3722){\makebox(0,0)[r]{\strut{}$\Delta$t=0.075[s]}}%
+      \put(2794,3722){\makebox(0,0)[r]{\strut{}$\Delta$t=0.0075[s]}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{CN226dtLEScoarse}}%
