--- a/figures/CTmesh.tex
+++ b/figures/CTmesh.tex
@@ -75,55 +75,65 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(946,704){\makebox(0,0)[r]{\strut{}-0.1}}%
+      \put(1078,704){\makebox(0,0)[r]{\strut{}-0.05}}%
       \csname LTb\endcsname%
-      \put(946,1383){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(1078,1074){\makebox(0,0)[r]{\strut{} 0}}%
       \csname LTb\endcsname%
-      \put(946,2061){\makebox(0,0)[r]{\strut{} 0.1}}%
+      \put(1078,1444){\makebox(0,0)[r]{\strut{} 0.05}}%
       \csname LTb\endcsname%
-      \put(946,2740){\makebox(0,0)[r]{\strut{} 0.2}}%
+      \put(1078,1814){\makebox(0,0)[r]{\strut{} 0.1}}%
       \csname LTb\endcsname%
-      \put(946,3418){\makebox(0,0)[r]{\strut{} 0.3}}%
+      \put(1078,2184){\makebox(0,0)[r]{\strut{} 0.15}}%
       \csname LTb\endcsname%
-      \put(946,4097){\makebox(0,0)[r]{\strut{} 0.4}}%
+      \put(1078,2554){\makebox(0,0)[r]{\strut{} 0.2}}%
       \csname LTb\endcsname%
-      \put(946,4775){\makebox(0,0)[r]{\strut{} 0.5}}%
+      \put(1078,2925){\makebox(0,0)[r]{\strut{} 0.25}}%
       \csname LTb\endcsname%
-      \put(1078,484){\makebox(0,0){\strut{}-25}}%
+      \put(1078,3295){\makebox(0,0)[r]{\strut{} 0.3}}%
       \csname LTb\endcsname%
-      \put(1651,484){\makebox(0,0){\strut{}-20}}%
+      \put(1078,3665){\makebox(0,0)[r]{\strut{} 0.35}}%
       \csname LTb\endcsname%
-      \put(2223,484){\makebox(0,0){\strut{}-15}}%
+      \put(1078,4035){\makebox(0,0)[r]{\strut{} 0.4}}%
       \csname LTb\endcsname%
-      \put(2796,484){\makebox(0,0){\strut{}-10}}%
+      \put(1078,4405){\makebox(0,0)[r]{\strut{} 0.45}}%
       \csname LTb\endcsname%
-      \put(3368,484){\makebox(0,0){\strut{}-5}}%
+      \put(1078,4775){\makebox(0,0)[r]{\strut{} 0.5}}%
       \csname LTb\endcsname%
-      \put(3941,484){\makebox(0,0){\strut{} 0}}%
+      \put(1210,484){\makebox(0,0){\strut{}-25}}%
       \csname LTb\endcsname%
-      \put(4513,484){\makebox(0,0){\strut{} 5}}%
+      \put(1769,484){\makebox(0,0){\strut{}-20}}%
       \csname LTb\endcsname%
-      \put(5086,484){\makebox(0,0){\strut{} 10}}%
+      \put(2329,484){\makebox(0,0){\strut{}-15}}%
       \csname LTb\endcsname%
-      \put(5658,484){\makebox(0,0){\strut{} 15}}%
+      \put(2888,484){\makebox(0,0){\strut{}-10}}%
       \csname LTb\endcsname%
-      \put(6231,484){\makebox(0,0){\strut{} 20}}%
+      \put(3447,484){\makebox(0,0){\strut{}-5}}%
+      \csname LTb\endcsname%
+      \put(4007,484){\makebox(0,0){\strut{} 0}}%
+      \csname LTb\endcsname%
+      \put(4566,484){\makebox(0,0){\strut{} 5}}%
+      \csname LTb\endcsname%
+      \put(5125,484){\makebox(0,0){\strut{} 10}}%
+      \csname LTb\endcsname%
+      \put(5684,484){\makebox(0,0){\strut{} 15}}%
+      \csname LTb\endcsname%
+      \put(6244,484){\makebox(0,0){\strut{} 20}}%
       \csname LTb\endcsname%
       \put(6803,484){\makebox(0,0){\strut{} 25}}%
       \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$C_T$}}}%
-      \put(3940,154){\makebox(0,0){\strut{}Angle of attack {$\alpha$} [$\degree$]}}%
+      \put(4006,154){\makebox(0,0){\strut{}Angle of attack {$\alpha$} [$\degree$]}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(4569,4602){\makebox(0,0)[r]{\strut{}experimental}}%
+      \put(4635,4602){\makebox(0,0)[r]{\strut{}experimental}}%
       \csname LTb\endcsname%
-      \put(4569,4382){\makebox(0,0)[r]{\strut{}reference mesh}}%
+      \put(4635,4382){\makebox(0,0)[r]{\strut{}reference mesh}}%
       \csname LTb\endcsname%
-      \put(4569,4162){\makebox(0,0)[r]{\strut{}50$\%$ refinement}}%
+      \put(4635,4162){\makebox(0,0)[r]{\strut{}50$\%$ refinement}}%
       \csname LTb\endcsname%
-      \put(4569,3942){\makebox(0,0)[r]{\strut{}150$\%$ refinement}}%
+      \put(4635,3942){\makebox(0,0)[r]{\strut{}150$\%$ refinement}}%
       \csname LTb\endcsname%
-      \put(4569,3722){\makebox(0,0)[r]{\strut{}200$\%$ refinement}}%
+      \put(4635,3722){\makebox(0,0)[r]{\strut{}200$\%$ refinement}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{CTmesh}}%
